--- a/.env
+++ b/.env
@@ -1,26 +1,44 @@
-BASENAME=${BASENAME}
-REGION=westus2
-FAILOVER_REGION=eastus2
+BASENAME=memecdk1
+#LOCATION=westus2
+FAILOVER_LOCATION=eastus2
+#DOTENV_FILENAME=.env
+AZURE_FUNCTION_APPS="memecdk1function|src/net/Services/Functions"
+
+#PROVISION_FILE=iac/main.bicep
+#PROVISION_TEMPLATE_FILE=@iac/main.parameters.json
+
+#TYE_FILE=tye.yaml
+TYE_RUN_ARGS="--watch --logs console -v debug --tags local"
+TYE_DEPLOY_ARGS="-v debug --tags cloud"
+TYE_UNDEPLOY_ARGS="-v debug --tags cloud"
+TYE_DEBUG_ARGS="--watch --logs console -v debug --tags local --debug memealyzernetqueueservice"
+TYE_GENERATE_ARGS="-v debug --tags cloud"
+
+AZURE_CLI_DEBUG=true
 
 # SET TO AUTO SELECT AZURE SUB
 #AZURE_SUBSCRIPTION_ID=
 
 # SCRIPT VARS
-AZURE_FUNCTION_APP_NAME=${BASENAME}function
-AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
+#AZURE_CONTAINER_REGISTRY_SERVER=memecdk1acr.azurecr.io
+
+ENVSUBS=""
 
 # Use the following if you want to run with local k8s cluster
 #K8S_CONTEXT=docker-desktop
 
-K8S_CONTEXT=${BASENAME}aks
+#K8S_CONTEXT=memecdk1aks
 
 # Update the following to force a new image creation
-CONTAINER_TAG=1.0.13
+CONTAINER_TAG=1.0.15
 
 # APP VARS
 
+
+#AZURE_RESOURCE_GROUP=memecdk1rg
+
 # FOR LOCAL DEV WITH DOCKER
-#FUNCTIONS_ENDPOINT=http://localhost:3080
+#AZURE_FUNCTIONS_ENDPOINT=http://localhost:3080
 #API_ENDPOINT=http://localhost:2080
 
 IMAGE_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
@@ -60,3 +78,5 @@ IMAGE_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #TUNNEL_TYPE=NGROK
 #NGROK_AUTHTOKEN="--authtoken"
 
+
+AZURE_SUBSCRIPTION_ID=25fd0362-aa79-488b-b37b-d6e892009fdf
