--- a/.template.env
+++ b/.template.env
@@ -1,26 +1,44 @@
-BASENAME=meme721
-REGION=westus2
-FAILOVER_REGION=eastus2
+BASENAME=${BASENAME}
+#LOCATION=westus2
+FAILOVER_LOCATION=eastus2
+#DOTENV_FILENAME=.env
+AZURE_FUNCTION_APPS="${BASENAME}function|src/net/Services/Functions"
+
+#PROVISION_FILE=iac/main.bicep
+#PROVISION_TEMPLATE_FILE=@iac/main.parameters.json
+
+#TYE_FILE=tye.yaml
+TYE_RUN_ARGS="--watch --logs console -v debug --tags local"
+TYE_DEPLOY_ARGS="-v debug --tags cloud"
+TYE_UNDEPLOY_ARGS="-v debug --tags cloud"
+TYE_DEBUG_ARGS="--watch --logs console -v debug --tags local --debug memealyzernetqueueservice"
+TYE_GENERATE_ARGS="-v debug --tags cloud"
+
+AZURE_CLI_DEBUG=true
 
 # SET TO AUTO SELECT AZURE SUB
 #AZURE_SUBSCRIPTION_ID=
 
 # SCRIPT VARS
-AZURE_FUNCTION_APP_NAME=meme721function
-AZURE_CONTAINER_REGISTRY_SERVER=meme721acr.azurecr.io
+#AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
+
+ENVSUBS=""
 
 # Use the following if you want to run with local k8s cluster
 #K8S_CONTEXT=docker-desktop
 
-K8S_CONTEXT=meme721aks
+#K8S_CONTEXT=${BASENAME}aks
 
 # Update the following to force a new image creation
 CONTAINER_TAG=1.0.13
 
 # APP VARS
 
+
+#AZURE_RESOURCE_GROUP=${BASENAME}rg
+
 # FOR LOCAL DEV WITH DOCKER
-#FUNCTIONS_ENDPOINT=http://localhost:3080
+#AZURE_FUNCTIONS_ENDPOINT=http://localhost:3080
 #API_ENDPOINT=http://localhost:2080
 
 IMAGE_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
