Remove env from env

--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -13,7 +13,7 @@ env:
   BASENAME: memecdk1
   LOCATION: westus2
   FAILOVER_LOCATION: eastus2
-  AZURE_FUNCTION_APPS: ${{ env.BASENAME }}function|src/net/Services/Functions
+  AZURE_FUNCTION_APPS: memecdk1function|src/net/Services/Functions
   CONTAINER_TAG: 1.0.${{ github.run_number }}
   IMAGE_ENDPOINT: https://meme-api.herokuapp.com/gimme/wholesomememes
   TYE_DEPLOY_ARGS: -v debug --tags cloud
