--- a/.template.env
+++ b/.template.env
@@ -22,7 +22,7 @@ AZURE_CLI_DEBUG=true
 # SCRIPT VARS
 #AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
 
-ENVSUBS=""
+#ENVSUBS=""
 
 # Use the following if you want to run with local k8s cluster
 #K8S_CONTEXT=docker-desktop
