Update to new cdk naming

--- a/.env
+++ b/.env
@@ -1,47 +1,49 @@
-BASENAME=memecdk1
+BASENAME=${BASENAME}
 #LOCATION=westus2
 FAILOVER_LOCATION=eastus2
 #DOTENV_FILENAME=.env
-AZURE_FUNCTION_APPS="memecdk1function|src/net/Services/Functions"
+AZURE_FUNCTION_APPS="${BASENAME}function|src/net/Services/Functions"
 
 #PROVISION_FILE=iac/main.bicep
-#PROVISION_TEMPLATE_FILE=@iac/main.parameters.json
+#PROVISION_PARAMETERS_FILE=iac/main.parameters.json
 
-#TYE_FILE=tye.yaml
-TYE_RUN_ARGS="--watch --logs console -v debug --tags local"
-TYE_DEPLOY_ARGS="-v debug --tags cloud"
-TYE_UNDEPLOY_ARGS="-v debug --tags cloud"
-TYE_DEBUG_ARGS="--watch --logs console -v debug --tags local --debug memealyzernetqueueservice"
-TYE_GENERATE_ARGS="-v debug --tags cloud"
+#DEPLOY_FILE=cdk.yaml
+RUN_ARGS="--watch --logs console -v debug --tags local"
+DEPLOY_ARGS="-v debug --tags cloud"
+UNDEPLOY_ARGS="-v debug --tags cloud"
+DEBUG_ARGS="--watch --logs console -v debug --tags local --debug memealyzernetqueueservice"
+GENERATE_ARGS="-v debug --tags cloud"
 
 AZURE_CLI_DEBUG=true
+
+# Update the following to force a new image creation
+CONTAINER_TAG=1.0.13
 
 # SET TO AUTO SELECT AZURE SUB
 #AZURE_SUBSCRIPTION_ID=
 
 # SCRIPT VARS
-#AZURE_CONTAINER_REGISTRY_SERVER=memecdk1acr.azurecr.io
+#AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
 
 #ENVSUBS=""
 
 # Use the following if you want to run with local k8s cluster
 #K8S_CONTEXT=docker-desktop
 
-#K8S_CONTEXT=memecdk1aks
+#K8S_CONTEXT=${BASENAME}aks
 
-# Update the following to force a new image creation
-CONTAINER_TAG=1.0.15
+
 
 # APP VARS
 
 
-#AZURE_RESOURCE_GROUP=memecdk1rg
+#AZURE_RESOURCE_GROUP=${BASENAME}rg
 
 # FOR LOCAL DEV WITH DOCKER
 #AZURE_FUNCTIONS_ENDPOINT=http://localhost:3080
 #API_ENDPOINT=http://localhost:2080
 
-IMAGE_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
+#IMAGE_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 # === AZURE_STORAGE_TYPE (Default=COSMOS_SQL)
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
 #AZURE_STORAGE_TYPE=COSMOS_SQL
@@ -78,5 +80,3 @@ IMAGE_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #TUNNEL_TYPE=NGROK
 #NGROK_AUTHTOKEN="--authtoken"
 
-
-AZURE_SUBSCRIPTION_ID=25fd0362-aa79-488b-b37b-d6e892009fdf
