--- a/cdk.yaml
+++ b/cdk.yaml
@@ -30,12 +30,12 @@ services:
         containerPort: 4040
         protocol: http
     volumes:
-      - source: config/ngrok
+      - source: ./config/ngrok
         target: /home/config/ngrok
     tags:
       - ${TUNNEL_ENABLED}
   - name: memealyzernetwebapp
-    project: src/net/WebApp/WebApp.csproj
+    project: ../src/net/WebApp/WebApp.csproj
     bindings:
       - port: 1080
         containerPort: 80
@@ -43,7 +43,7 @@ services:
       - local
       - cloud
   - name: memealyzernetapi
-    project: src/net/Api/Api.csproj
+    project: ../src/net/Api/Api.csproj
     bindings:
       - port: 2080
         containerPort: 80
@@ -53,14 +53,14 @@ services:
       - local
       - cloud
   - name: memealyzernetfunction
-    azureFunction: src/net/Services/Functions/
+    azureFunction: ../src/net/Services/Functions/
     bindings:
       - port: 3080
         protocol: http
     tags:
       - local
   - name: memealyzernetqueueservice
-    project: src/net/Services/QueueService/QueueService.csproj
+    project: ../src/net/Services/QueueService/QueueService.csproj
     env_file:
       - .env
     tags:
